assets/style.css
/* Global styles */

body {
    font-family: Roboto, Arial;
    min-height: 100vh;
    background-color: #fbfaf3;
    /* To push the footer down to the bottom of the page */
    display: flex;
    flex-direction: column;
    /* keeps the hero body fully visible, otherwise the nav covers some of it */
    padding-top: 58px;
    max-width: 1800px;
    margin-left: auto;
    margin-right: auto;
}

main {
    width: inherit;
}

img {
    object-fit: cover;
}

.redText {
    color: rgb(255, 0, 0);
}

.redBorder {
    border: red 1px solid;
}

.button{
    width: 120px;
    margin-top: 5px;
    margin-bottom: 10px;
    background-color: #c23311;
    color: aliceblue;
    border: none;
    padding: 5px;
    font-weight: bold;
    border-radius: 5px;
    text-decoration: none;
}

.button:hover {
    background-color:#ff3300;
}

div .card:hover {
    box-shadow: 1px 1px rgba(104, 95, 95, 0.37), -1px 0 rgba(104, 95, 95, 0.37);
    /* box-shadow: 1px 1px 1px 1px rgba(29, 27, 27, 0.37);
    box-shadow: 3px 3px 3px 3px rgba(29, 27, 27, 0.37); */
    transition: box-shadow 0.4s ease-in-out;
}
/* Navbar */
nav {
    padding: 3px 0 3px 0 !important;
    /* Keeps the nav constantly visible */
    position: fixed !important;
    top: 0;
    width: 100%;
    max-width: 1800px;
    z-index: 10;
}

.nav-logo {
    color: aliceblue !important;
    /* font-size: 35px; */
}

.bg-nav {
    background-color: #0F1525;
}

.cta-div {
    margin-left: auto;
    float: right;
    font-weight: 700;
    background-color: #c23311;
    margin-top: 7px;
    padding: 0 5px 0 5px;
    border-radius: 5px;
    margin-bottom: 5px;
    margin-right: 20px;
}

.cta {
    color: white !important;
}

/* Main styles */

/* Hero image */
#heroImg {
    width: 100%;
    height: 75vh;
    max-height: 700px;
}

/* City image cards */

div .card {
    margin: 5px;
    padding: 0px;
}

/* City card images */

.cityImage {
    min-width: 100%;
    height: 190px;
}

.cityCardBody {
    padding: 5px 0 0 0;
}

.cityCardOutlined {
    outline: #0F1525 solid 2px;
}

/* Places to visit cards */

/* Partners sponsor cards */

.partnerSponsorCardImg {
    max-height: 268px;
}

/* Google maps API dispayed map*/
#map {
    width: 100%;
    height: 400px;
}

/* Package deal cards */

.silverCard {
    background-color: #6D87F0 !important;
}

.goldCard {
    background-color: #4251D8 !important;
}

.platinumCard {
    background-color: #000084 !important;
}

    /* To be deleted to make code more reusable */

.styleButton {  
    text-underline-offset: none;
    /* width: 120px;
    margin-top: 5px;
    margin-bottom: 10px;
    background-color: #c23311;
    color: aliceblue;
    border: none;
    padding: 5px;
    font-weight: bold;
    border-radius: 5px; */
}
.packageButton {
    position: absolute;
    bottom: 0;
    justify-content: center;
}

.styleButtonActive {
    background-color: #ff3300;
    border: 1px solid black;
}

.packageCard .card-body {
    min-height: 210px;
}

/*  */
/* Form styles */

/* Button style for choosing a city */

/* Old city button styles 
 border-radius: 300px;
width: 150px;
height: 50px; */

/* To be deleted to make code more reusable */
.cityButton {
    text-underline-offset: none;
    /* width: 120px;
    margin-top: 5px;
    margin-bottom: 10px;
    background-color: #c23311;
    color: aliceblue;
    border: none;
    padding: 5px;
    font-weight: bold;
    border-radius: 5px; */
}

.cityActive {
    background-color: #ff3300;
    border: 1px black solid;
}
/* This toggles form input errors on and off by making them visible or invisible */
.inactiveError {
    visibility: hidden;
}

/* Success page */
#success-main {
    position: absolute;
    top: 52px;
    bottom: 252.59px;
    width: 100%;
}
#success-page {
    text-align: center;
    position: absolute;
    top: 50%;
    transform: translate(-50%, -50%);
    left: 50%;
    /* height: 20em; */
}

.success-checkmark {
    font-size: 100px;
    padding-bottom: 10px;
    color: lightgreen;
}

.success-home-btn {
    background-color: #c23311;
    height: 37px;
    width: 190px;
    padding-top: 4px;
}
/* Footer styles */

#footer {
    background-color: #212529;
    color: #FFFFFF;

    /* To push the footer down to the bottom of the page */
    margin-top: auto;
}

.fa-brands {
    font-size: 40px;
    margin: 9px;
    color: white;
}

.footerContacts {
    font-size: 20px;
    color: white
}

/* Media devices (Mobile, 576px and below) */
@media screen and (max-width:576px) {
    #success-page {
        top: 37%;
    }
    .success-checkmark {
        font-size: 40px;
        padding-bottom: 0;
        color: lightgreen;
    }
    .success-home-btn {
        background-color: #c23311;
        height: 37px;
        width: 190px;
        padding-top: 0;
    }
    #success-main {
        position: absolute;
        top: 52px;
        bottom: 327px;
        width: 100%;
    }
}

/* Media devices (tablets, 768px and up) */
@media screen and (min-width: 768px) {
    .partnerSponsorCardImg {
        height: 200px;
    }
}

/* Media devices (Laptops, 1024px and up) */
@media screen and (min-width: 1024px) {
    .partnerSponsorCardImg {
        height: 268px;
    }
}

/* Cards */
/* Grids, margin between cards, images full width  */
/* 



*/

